updated the css file

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Serif&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Your Form</title>
+  <title>Sign-up</title>
 </head>
 
 <body>
   <div class="container">
     <div class="left-column">
-      <img src="your-logo.png" alt="Your Logo">
+      <img src="Logo (2).png" alt="Logo">
       <h2>For Individuals</h2>
       <p>Start benefiting from the wellness experience. For companies looking to increase productivity and improve organizational wellness.</p>
     </div>
